--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "nuxt": "^3.3.1"
-  }
+    "private": true,
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare"
+    },
+    "devDependencies": {
+        "@nuxtjs/tailwindcss": "^6.6.0",
+        "autoprefixer": "^10.4.14",
+        "nuxt": "^3.3.1",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.7"
+    },
+    "overrides": {
+        "vue": "latest"
+    },
+    "dependencies": {
+        "@pinia/nuxt": "^0.4.7",
+        "pinia": "^2.0.33"
+    }
 }
