--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "latest"
     },
     "dependencies": {
+        "@kyvg/vue3-notification": "^2.9.0",
         "@pinia/nuxt": "^0.4.7",
         "pinia": "^2.0.33"
     }
